COMPARISONJAVA-155: Update GroupDocs.Comparison samples according to changes in API