@@ -3,3 +3,6 @@
 
 <br/>
 This sample solution demonstrate the usage of [GroupDocs.Comparison for Java library]( http://groupdocs.com/java/document-comparison-library). 
+
+### Memory parameters
+`-Xmx2048m -Xms256m -XX:PermSize=256m -XX:MaxPermSize=512m`
